# task-scheduler

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  perf_harness.c
include/: profiler.h  scheduler.h
src/: dispatcher_scheduler.c  main.c  profiler.c  scheduler.c  sequential_scheduler.c
tests/: CMakeLists.txt  unit_tests.c
